--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;700;800;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap');
 
 html {
     box-sizing: border-box;
@@ -22,6 +22,11 @@ html {
 
   a {
     text-decoration-line: none;
+  }
+
+  button {
+    cursor: pointer;
+    font-family: Inter;
   }
   
   /* img {
