--- a/src/components/Layout/About/about.css
+++ b/src/components/Layout/About/about.css
@@ -9,11 +9,12 @@
 }
 
 .about-image {
+    width: 100vw;
+}
+
+.about-image > img {
     width: 100%;
-    height: 233px;
-    background: url('../../assets/about_image.png'), lightgray 50%;
-    background-repeat: no-repeat;
-    background-size: cover;
+    height: auto;
 }
 
 .about-main{
