--- a/src/index.css
+++ b/src/index.css
@@ -10,7 +10,7 @@ html {
     box-sizing: inherit;
   }
   
-  body, h1, h2, h3, h4, h5, h6, p, ol, ul {
+  body, h1, h2, h3, h4, h5, h6, p, ol, ul, button {
     margin: 0;
     padding: 0;
     font-weight: normal;
@@ -28,8 +28,24 @@ html {
     cursor: pointer;
     font-family: Inter;
   }
-  
-  /* img {
-    max-width: 100%;
-    height: auto;
-  } */
+
+  .layout-page, .host-layout {
+    min-height: calc(100vh - 111px - 75px);
+  }
+
+  .primary-heading {
+    color: #161616;
+    font-size: 24px;
+  }
+
+  .primary-text {
+    color: #161616;
+    font-size: 16px;
+    font-weight: 500;
+  }
+
+  .secondary-text {
+    color: #4D4D4D;
+    font-weight: 500;
+    line-height: 31.6px;
+  }
