--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -42,3 +42,13 @@
     text-decoration-color: #161616;;
     color: #161616;;
 }
+
+.login-nav {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.login-nav img {
+    height: 24px;
+}
